# http/controller/api/user.go
@@ -36,7 +36,8 @@ type User struct {
 // @Produce  json
 // @Success 200 {object} apiResp.UserPayload
 // @Failure 500 {object} response.Response
-// @Router /currentUser [get]
+// @Router /currentUser [post]
+// @Router /user/info [get]
 // @Security token
 func (u *User) Info(c *gin.Context) {
 	user := service.AllService.UserService.CurUser(c)
